--- a/app/src/main/res/layout/fragment_diagram.xml
+++ b/app/src/main/res/layout/fragment_diagram.xml
@@ -6,11 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="71dp"
-        android:text="hier Diagramme"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="17dp" />
+    <com.jjoe64.graphview.GraphView
+        android:id="@+id/graph"
+        android:layout_width="match_parent"
+        android:layout_height="383dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
